refactor(mycat): 优化分页工具类
- 为 PageUtils 和 ReturnPageResultUtils 类添加私有构造方法，防止实例化
- 优化 PageUtils.copyProperties 方法签名，使用 Supplier 接口替代 Class 类型参数
- 增加 PageUtils.copyProperties 方法的重载版本，支持 Class 类型参数
- 更新方法实现，使用 Supplier 接口创建目标对象实例