@@ -4,6 +4,7 @@ import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import org.springframework.beans.BeanUtils;
 
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 /**
@@ -13,6 +14,34 @@ import java.util.stream.Collectors;
  */
 public class PageUtils {
 
+    private PageUtils() {
+    }
+
+    /**
+     * 分页复制
+     * @param page 分页
+     * @param type 类型
+     * @param <E> E 原始类型
+     * @param <R> R 返回类型
+     * @return IPage
+     */
+    public static <E, R>IPage<R> copyProperties(IPage<E> page, Supplier<R> type) {
+        IPage<R> rs = new Page<>();
+        rs.setPages(page.getPages());
+        rs.setTotal(page.getTotal());
+        rs.setSize(page.getSize());
+        rs.setCurrent(page.getCurrent());
+        rs.setRecords(page.getRecords().stream().map(it -> {
+            try {
+                R r = type.get();
+                BeanUtils.copyProperties(it, r);
+                return r;
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
+        }).collect(Collectors.toList()));
+        return rs;
+    }
 
     /**
      * 分页复制
@@ -23,20 +52,12 @@ public class PageUtils {
      * @return IPage
      */
     public static <E, R>IPage<R> copyProperties(IPage<E> page, Class<R> type) {
-        IPage<R> rs = new Page<>();
-        rs.setPages(page.getPages());
-        rs.setTotal(page.getTotal());
-        rs.setSize(page.getSize());
-        rs.setCurrent(page.getCurrent());
-        rs.setRecords(page.getRecords().stream().map(it -> {
+        return copyProperties(page, () -> {
             try {
-                R r = type.newInstance();
-                BeanUtils.copyProperties(it, r);
-                return r;
+                return type.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
-        }).collect(Collectors.toList()));
-        return rs;
+        });
     }
 }
